# viral-formula-studio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  DEPLOY_IBM.md  DOCUMENTACAO_IA.md  Dockerfile  LICENSE  README.md  agent.py  api.py  app.py  main.py  pyproject.toml
.agents/rules/: development_rules.md
.github/workflows/: docker-publish.yml
data/: transcriptions.json
data/profiles/: Bryan.json  bryan.json  jeffnippard.json  kallaway.json
docs/: HACKATHON_DEMO.md  INNOVATION.md
docs/deployment/: DEPLOY_IBM.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: styles.css
frontend/src/hooks/: use-theme.tsx
frontend/src/routes/: __root.tsx  index.tsx
studio/: __init__.py  analyze_text.py  analyze_thumbnail.py  analyze_visual.py  config.py  create.py  dossier.py  factory.py  frames.py  ingest.py  limits.py  metrics.py  parse.py  pipeline.py  research.py  schemas.py  script_format.py  store.py  text_quality.py  transcribe.py
tests/: test_create.py  test_frames.py  test_ingest.py  test_metrics.py  test_parse.py  test_research.py  test_schemas.py  test_script_format.py  test_store.py  test_text_quality.py
