[project]
name = "viral-formula-studio"
version = "0.2.0"
description = "Multimodal reverse engineering of a creator's viral formula — copy, hooks and video editing grammar — delivered as an actionable playbook."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==2.7.3",
    "groq>=1.5.0",
    "openai>=1.99.2",
    "ibm-watsonx-ai>=1.3.0",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.0.0",
    "tavily-python>=0.7.26",
    "sqlalchemy>=2.0.42",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "yt-dlp>=2026.7.4",
    "curl-cffi>=0.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
